# human-augmentation

./: .gitignore  .rgignore  README.md  arch.md  main.py  pyproject.toml  reaction_detect.py  read_mpu.py  receiver.html  requirements.txt  transcribe_2min.txt  transcribe_natural.txt
app/: README.md
app/agents/: backchannel_graph.py
app/audio/: ffplay_stream.py  player.py
app/cli/: README.md  dashboard.py  demo.py  imu_probe.py  listener.py  run.py  talker.py
app/core/: agent.py  catalog.py  selector.py  types.py
app/demo/: README.md  __init__.py  script.py  session.py
app/eval/: README.md  config.py  db.py  experiment.py  main.py  models.py  stage_policy.py  trace_loader.py
app/imu/: README.md  buffer.py  calibration.py  detector.py  device.py  (+5 more)
archive/: README.md
data/: README.md  catalog.tsv  eval_ratings.sqlite
docs/: README.md  backchannel_iteration_20260119.md  backchannel_timing.md  implementation_notes_20260114.md  implementation_plan.md  repository_guide.md
firmware/: README.md
others/: reaction_detect.py
paper_materials/: README.md
scripts/: README.md  anonymize_questionnaire.py  demo-up.sh  generate_chirp3_hd.py  generate_demo_audio.py  label_session_order.py  make_transcript_natural.py  make_transcript_stt_like.py  plot_questionnaire.py  plot_questionnaire_v2.py  prepare_questionnaire_v2.py  report_questionnaire_v2_stats.py  trace_to_tsv.py  tts_video.py
tests/: README.md  test_demo_script.py  test_demo_session.py  test_eval_db_stage.py  test_experiment_routes.py  test_imu_device.py  test_imu_signal_features.py  test_stage_policy.py
(+86 files in other folders)
